src/objects/Grant_Scheme__c.object
<CustomObject>
    <fields>
        <fullName>Rec_sector_International__c</fullName>
        <formula>IF(INCLUDES(Recipient_Sector__c, &quot;International&quot;), Scheme_Value_per_year__c/( 

IF(INCLUDES( Recipient_Sector__c ,&quot;Central Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Civil Society&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Local Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Public Organisations&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Non-Departmental Public Bodies&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Private&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Individuals&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;International&quot;),1,0) 


) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec sector International</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rec_sector_Local_Government__c</fullName>
        <formula>IF(INCLUDES(Recipient_Sector__c, &quot;Local Government&quot;), Scheme_Value_per_year__c/( 

IF(INCLUDES( Recipient_Sector__c ,&quot;Central Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Civil Society&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Local Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Public Organisations&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Non-Departmental Public Bodies&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Private&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Individuals&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;International&quot;),1,0) 


) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec sector Local Government</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rec_sector_NDPB__c</fullName>
        <formula>IF(INCLUDES(Recipient_Sector__c, &quot;Non-Departmental Public Bodies&quot;), Scheme_Value_per_year__c/( 

IF(INCLUDES( Recipient_Sector__c ,&quot;Central Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Civil Society&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Local Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Public Organisations&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Non-Departmental Public Bodies&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Private&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Individuals&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;International&quot;),1,0) 


) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec sector NDPB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rec_sector_Private__c</fullName>
        <formula>IF(INCLUDES(Recipient_Sector__c, &quot;Private&quot;), Scheme_Value_per_year__c/( 

IF(INCLUDES( Recipient_Sector__c ,&quot;Central Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Civil Society&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Local Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Public Organisations&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Non-Departmental Public Bodies&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Private&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Individuals&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;International&quot;),1,0) 


) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec sector Private</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rec_sector_Public_Organisations__c</fullName>
        <formula>IF(INCLUDES(Recipient_Sector__c, &quot;Public Organisations&quot;), Scheme_Value_per_year__c/( 

IF(INCLUDES( Recipient_Sector__c ,&quot;Central Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Civil Society&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Local Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Public Organisations&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Non-Departmental Public Bodies&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Private&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Individuals&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;International&quot;),1,0) 


) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec sector Public Organisations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recipient_Sector__c</fullName>
        <description>This is the Scheme&apos;s recipient sector</description>
        <inlineHelpText>Civil Society (Charities, Community Groups, Social enterprise, Communities - Universities are formally charities, so would come under here) - Public Organisations (schools, police, hospitals, libraries)</inlineHelpText>
        <label>Recipient Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Government</fullName>
                </value>
                <value>
                    <fullName>Local Government</fullName>
                </value>
                <value>
                    <fullName>Civil Society</fullName>
                </value>
                <value>
                    <fullName>Public Organisations</fullName>
                </value>
                <value>
                    <fullName>Non-Departmental Public Bodies</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Individuals</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_policy_name__c</fullName>
        <description>This is the related policy name for this scheme</description>
        <inlineHelpText>The name of the policy that the scheme was created to assist.</inlineHelpText>
        <label>Related policy name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_policy_objective__c</fullName>
        <description>The policy objectives</description>
        <inlineHelpText>The objective of the policy that the scheme was created to assist.</inlineHelpText>
        <label>Scheme aims and objectives</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_outcome__c</fullName>
        <inlineHelpText>In line with the minimum grants standards, an annual review should to be undertaken on each grant scheme. Please record the outcome of the review here.</inlineHelpText>
        <label>Scheme annual review outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continue</fullName>
                </value>
                <value>
                    <fullName>Stop</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Extended</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Terminated Early</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_outcome_details__c</fullName>
        <label>Scheme review outcome details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profile__c</fullName>
        <inlineHelpText>A explanation of this field can be found in our Glossary of Terms. This can be downloaded from the front page</inlineHelpText>
        <label>Scheme risk profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheme_Evalution_Completed__c</fullName>
        <inlineHelpText>Yes/No question. Please ensure you have evidence (if requested) of the Evaluation being done if you choose Yes to this question.</inlineHelpText>
        <label>Has the scheme evaluation been done?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <description>This is the name for this grant scheme</description>
        <inlineHelpText>The name of the Grant Scheme, which is a level down from Programme in the data model. This is central to the GGIS and every department should have Grant Schemes created in the system first, in order to have Grant Awards under them.</inlineHelpText>
        <label>Scheme Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheme_Objective__c</fullName>
        <inlineHelpText>Yes/No question. This refers to evaluation of the scheme as a whole. It should NOT be confused with evaluation of grant awards or recipients.</inlineHelpText>
        <label>Has the scheme achieved its objectives?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partially</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheme_Parent_Child__c</fullName>
        <description>JM 21/02/2107 - Determines if the Grant Scheme Name is a Parent, Child or N/A (Standalone Grant Scheme)</description>
        <inlineHelpText>Used to link schemes that run over multiple years but are input onto the system separately each year. The first scheme in the series is the parent. The subsequent schemes are the children. Select N/A if this does not apply to the scheme.</inlineHelpText>
        <label>Scheme Parent / Child</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheme_Reference_No__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is a reference number that can be given from a department&apos;s own internal system, should you wish to. It is optional &amp; will help reconciliation between GGIS &amp; your own system, but you don&apos;t have to include one.</inlineHelpText>
        <label>Scheme Reference No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheme_Value__c</fullName>
        <inlineHelpText>The total value of the scheme (budgeted). If the scheme has a multiple year duration, the scheme value should include all years. If scheme value is not known for multiple years, please create 1 separate scheme per year, with 1 year scheme value only.</inlineHelpText>
        <label>Scheme Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheme_Value_per_year__c</fullName>
        <formula>Scheme_Value__c  /  Duration_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheme Value per year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secondary_Purpose__c</fullName>
        <description>details can be found on : https://docs.google.com/spreadsheets/d/1Hb7iIacx-Koy2lIrXoqSyzdTf0bh-1TRvCyR8Jwtif8/edit#gid=488764022</description>
        <inlineHelpText>This is the same definition as the Primary purpose, but if you believe your grant has a secondary purpose and you would like to record this one, please include here.</inlineHelpText>
        <label>Secondary Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supporting delivery of a public service</fullName>
                </value>
                <value>
                    <fullName>Supporting delivery of a public policy</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Innovation</fullName>
                </value>
                <value>
                    <fullName>Financial Assistance / Support</fullName>
                </value>
                <value>
                    <fullName>Subscriptions and pension payments</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Senior_Responsible_Officer_Full_Name__c</fullName>
        <label>Senior Responsible Officer - Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Responsible_Officer_GGS__c</fullName>
        <formula>IF( Senior_Responsible_Officer_Full_Name__c =&quot;.&quot;,False, IF(ISBLANK(Senior_Responsible_Officer_Full_Name__c),False,True))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Senior Responsible Officer - GGS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>The date the Grant Scheme commences</inlineHelpText>
        <label>Scheme start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Location__c</fullName>
        <description>This is the target region location for this Scheme</description>
        <inlineHelpText>The geographical area that the scheme will cover</inlineHelpText>
        <label>Target Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
                <value>
                    <fullName>UK Wide</fullName>
                </value>
                <value>
                    <fullName>Overseas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Administration_Costs__c</fullName>
        <formula>Design_And_Development_Admin_Cost__c + Market_Engagement_And_Application__c +  Application_And_Assessment__c +  Award_And_Agree_Terms_Of_Grant_Payment__c +  Monitoring_And_Performance_Management__c +  Evaluation__c +  Other_Activity_1_Cost__c + Other_Activity_2_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Administration Costs (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>record_type_formula__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>record type formula</label>
        <type>Text</type>
    </fields>
    <label>Grant Scheme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Scheme_Reference_No__c</columns>
        <columns>Grant_Scheme_Name_Link__c</columns>
        <columns>Scheme_Value__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Funder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Department_s_Data</fullName>
        <columns>NAME</columns>
        <columns>Scheme_Reference_No__c</columns>
        <columns>Grant_Scheme_Name_Link__c</columns>
        <columns>Scheme_Value__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Funder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_My_Department_Data__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Department&apos;s Data</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SCH-{000000000}</displayFormat>
        <label>System Scheme Reference No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Schemes</pluralLabel>
    <recordTypes>
        <fullName>Approved_Grant_Scheme</fullName>
        <active>true</active>
        <description>When creating a new scheme, choose this if your grant has gone through the appropriate governance structures and has received final approval to go live.</description>
        <label>Approved Grant Scheme</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposed_Grant_Scheme</fullName>
        <active>true</active>
        <description>When creating a new scheme, choose this if your grant is being developed and has not yet received final approval to go live.</description>
        <label>Proposed Grant Scheme</label>
    </recordTypes>
    <recordTypes>
        <fullName>Withdrawn_Grant_Scheme</fullName>
        <active>true</active>
        <description>Proposed Grant Schemes that have been Withdrawn</description>
        <label>Withdrawn Grant Scheme</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>All_Fields_Are_Locked_Apart_From_Eval</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c)
 , NOT( $Profile.Name = &apos;System Administrator&apos;) ,NOT($Setup.Bypass__c.Business_Rules_for_Edit_and_Delete__c)
 , RecordType.DeveloperName = &quot;Approved_Grant_Scheme&quot;
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , NOT(ISNEW())
 , OR(
  AND(
   ISBLANK(Max_Grant_Award_End_Date__c)
   , NOT(ISBLANK(TEXT(Duration__c)))
   , NOT(ISPICKVAL(Duration__c, &apos;Unknown&apos;))
   , ISBLANK(Max_Grant_Award_End_Date__c)
   , (TODAY() - End_Date__c ) &gt; 365
  )
  , (TODAY() - Max_Grant_Award_End_Date__c) &gt; 365
 )
 , NOT(ISCHANGED(Scheme_Evalution_Completed__c ))
 , NOT(ISCHANGED(If_No_Reasons__c))
 , NOT(ISCHANGED(Scheme_Objective__c))
 , NOT(ISCHANGED(Reason_for_Given_Answer__c))
)</errorConditionFormula>
        <errorMessage>This record is locked. Please create a case or contact the grants hub support in order to modify this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allocation_Method_field_is_mandatory</fullName>
        <active>true</active>
        <description>Allocation Method field is mandatory</description>
        <errorConditionFormula>AND(
  NOT($Setup.Bypass__c.Validation_Rules__c)
 , RecordType.DeveloperName = &quot;Approved_Grant_Scheme&quot;
 , ISBLANK(Allocation_Method__c )
)</errorConditionFormula>
        <errorDisplayField>Allocation_Method__c</errorDisplayField>
        <errorMessage>Allocation Method field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approved_Cannot_change_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT($Setup.Bypass__c.Validation_Rules__c)
 , PRIORVALUE(RecordTypeId) = &quot;01224000000FMOQ&quot;
 , ISCHANGED(RecordTypeId)
)</errorConditionFormula>
        <errorMessage>Approved Grant Schemes cannot be updated to a different Record Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Authority_Act_field_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c)
 , RecordType.DeveloperName = &quot;Approved_Grant_Scheme&quot; 
 , NOT( Authority_Act__r.Is_Active__c )
)</errorConditionFormula>
        <errorDisplayField>Authority_Act__c</errorDisplayField>
        <errorMessage>Authority Act field is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Award_must_have_atLeast_1_FundingOrOther</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , RecordType.DeveloperName = &quot;Approved_Grant_Scheme&quot;
 , ISBLANK(TEXT( Public_funding_source__c ) )
 , ISBLANK(Other_public_funding_source__c )
)</errorConditionFormula>
        <errorMessage>Grant Scheme must have at least Public funding source or Other public funding source.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COFOG_L2_field_mandatory</fullName>
        <active>true</active>
        <description>COFOG L2 field is mandatory</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c)
 , RecordType.DeveloperName = &quot;Approved_Grant_Scheme&quot; 
 , ISBLANK(COFOG_L2__c)
)</errorConditionFormula>
        <errorDisplayField>COFOG_L2__c</errorDisplayField>
        <errorMessage>COFOG L2 field is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Capital_Resource_Mandatory</fullName>
        <active>true</active>
        <description>Capital Resource is mandatory</description>
        <errorConditionFormula>AND(
  NOT($Setup.Bypass__c.Validation_Rules__c) 
 , RecordType.DeveloperName = &quot;Approved_Grant_Scheme&quot;
 ,ISBLANK(TEXT(Capital_Resource__c))
)</errorConditionFormula>
        <errorDisplayField>Capital_Resource__c</errorDisplayField>
        <errorMessage>Please provide a value for the &quot;Capital/ Resource&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Child_Scheme_must_have_a_Parent</fullName>
        <active>true</active>
        <description>JM 17/02/2107 -A Grant Scheme classified as a Child must have a Parent Scheme</description>
        <errorConditionFormula>AND( 
NOT($Setup.Bypass__c.Validation_Rules__c) 
,OR 
(ISPICKVAL( Scheme_Parent_Child__c , &quot;Child&quot;))
,(ISBLANK( Parent_Grant_Scheme__c ) )
)</errorConditionFormula>
        <errorMessage>A Grant Scheme with a &quot;Scheme Parent / Child&quot; value of Child must have a Parent Grant Scheme</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concidered_Grants_Advice_Panel_mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
NOT($Setup.Bypass__c.Validation_Rules__c) 
, RecordType.DeveloperName = &quot;Approved_Grant_Scheme&quot;
, ISBLANK(TEXT(Considered_by_the_Grants_Advice_Panel__c)) 
)</errorConditionFormula>
        <errorDisplayField>Considered_by_the_Grants_Advice_Panel__c</errorDisplayField>
        <errorMessage>This field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Considered_by_the_Grants_Is_Mandatory</fullName>
        <active>true</active>
        <description>Considered_by_the_Grants_Advice_Panel__c field is mandatory</description>
        <errorConditionFormula>AND(
  NOT($Setup.Bypass__c.Validation_Rules__c)
 , RecordType.DeveloperName = &quot;Approved_Grant_Scheme&quot; 
 , ISBLANK(TEXT(Considered_by_the_Grants_Advice_Panel__c))
)</errorConditionFormula>
        <errorDisplayField>Considered_by_the_Grants_Advice_Panel__c</errorDisplayField>
        <errorMessage>&apos;Considered by the Grants Advice Panel&apos; field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Department_Check_on_create</fullName>
        <active>true</active>
        <description>This is a global validation rule to stop users from updating other department&apos;s record.</description>
        <errorConditionFormula>AND ( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , ISNEW()
 , NOT(ISBLANK(Programme__c))
 , NOT(  Programme__r.Is_My_Department_Data__c),
NOT( $Profile.Name = &apos;System Administrator&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Programme__c</errorDisplayField>
        <errorMessage>You don&apos;t have update privilege on the related Programme record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Department_Check_on_update</fullName>
        <active>true</active>
        <description>This is a global validation rule to stop users from updating other department&apos;s record.</description>
        <errorConditionFormula>AND ( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , NOT(ISNEW())
 , Owner:User.UserRoleId &lt;&gt;  $User.UserRoleId ,
NOT( $Profile.Name = &apos;System Administrator&apos;) 
)</errorConditionFormula>
        <errorMessage>You don&apos;t have update privilege on this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Duration_field_is_mandatatory</fullName>
        <active>true</active>
        <description>Duration field is mandatory.</description>
        <errorConditionFormula>AND( 
NOT($Setup.Bypass__c.Validation_Rules__c)
, RecordType.DeveloperName = &quot;Approved_Grant_Scheme&quot;  
, ISBLANK(TEXT(Duration__c)) 
)</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>Duration field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_Fund_name_is_mandatory_for_EU_source</fullName>
        <active>true</active>
        <description>If EU Funding chosen, then this cannot be blank</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , OR(
  ISPICKVAL( Public_funding_source__c , &quot;EU Funding&quot;)
  , ISPICKVAL( Public_funding_source__c , &quot;UK + EU funding&quot;)
 )
 ,ISBLANK( EU_Fund_name__c )
)</errorConditionFormula>
        <errorDisplayField>EU_Fund_name__c</errorDisplayField>
        <errorMessage>If EU Funding chosen, then this cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_Fund_name_should_be_blank_for_UK_src</fullName>
        <active>true</active>
        <description>This is to prevent users from adding invalid data into the system.</description>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL( Public_funding_source__c , &quot;UK Exchequer&quot;) 
 ,NOT(ISBLANK( EU_Fund_name__c ))
)</errorConditionFormula>
        <errorDisplayField>EU_Fund_name__c</errorDisplayField>
        <errorMessage>EU Fund name should blank because funding source is not an EU source.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Evaluation_fields_are_locked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c)
 , NOT($Setup.Bypass__c.Business_Rules_for_Edit_and_Delete__c)
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , NOT(ISNEW())
 , AND( 
    NOT(ISBLANK(TEXT(Duration__c))) 
    , NOT(ISPICKVAL(Duration__c, &apos;Unknown&apos;)) 
   ) 
 , OR((TODAY() - DATEVALUE(Evaluation_Modified_Date_by_Portal_User__c)) = 0         
, (TODAY() - DATEVALUE(Evaluation_Modified_Date_by_Portal_User__c)) &gt; 2)
 , OR(
   ISCHANGED( Scheme_Objective__c )
   , ISCHANGED( If_No_Reasons__c )
   , ISCHANGED( Scheme_Evalution_Completed__c )
   , ISCHANGED( Reason_for_Given_Answer__c )
 )
)</errorConditionFormula>
        <errorMessage>Evaluation fields cannot be modified. Please create a case or contact the grants hub support in order to modify this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Funder_field_mandatory_asFieldCriteria</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c)
 , NOT(Funder__r.Is_Funder__c)
)</errorConditionFormula>
        <errorDisplayField>Funder__c</errorDisplayField>
        <errorMessage>Value does not exist or does not match validation rule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GS_Do_not_publish_if_checked</fullName>
        <active>true</active>
        <description>This validation rule makes it so that when Do not publish is checked, Reason for not publishing or Explanation for not publishing has to be populated</description>
        <errorConditionFormula>AND(  GS_Do_not_publish__c  = true,
ISPICKVAL(  GS_Reason_for_not_publishing__c , &apos;&apos;),
(ISBLANK(  GS_Explanation_for_not_publishing__c  )))</errorConditionFormula>
        <errorMessage>If Do not publish is checked, then either Reason for not publishing or Explanation for not publishing has to be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GS_Do_not_publish_must_be_checked</fullName>
        <active>true</active>
        <description>This validation rule is for allowing to have Do not publish checked before Reason for not publishing or Explanation for not publishing can be populated</description>
        <errorConditionFormula>and( GS_Do_not_publish__c = false,
OR(NOT(isblank(TEXT( GS_Reason_for_not_publishing__c))),
NOT(isblank( GS_Explanation_for_not_publishing__c ))))</errorConditionFormula>
        <errorMessage>Do not publish must be checked before Reason for not publishing or Explanation for not publishing can be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Issues_and_questions_field_is_mandatory</fullName>
        <active>true</active>
        <description>&apos;Issues and questions for NGAP&quot; field is mandatory if and only if &apos;Department referring to NGAP is equal to &quot;Yes&quot;.</description>
        <errorConditionFormula>AND( 
   NOT($Setup.Bypass__c.Validation_Rules__c) 
 , RecordType.DeveloperName = &quot;Proposed_Grant_Scheme&quot;
 , ISPICKVAL( Department_referring_to_NGAP__c , &apos;Yes&apos;)
 , ISBLANK( Issues_and_questions_for_NGAP__c ) 
)</errorConditionFormula>
        <errorDisplayField>Issues_and_questions_for_NGAP__c</errorDisplayField>
        <errorMessage>&apos;Issues and questions for NGAP&quot; field is mandatory if &apos;Department referring to NGAP is equal to &quot;Yes&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Authority_Act_is_mandatory</fullName>
        <active>true</active>
        <description>Other Authority Act field is mandatory if and only if &quot;Authority Act&quot; field value is equal to &quot;Other Value&quot;.</description>
        <errorConditionFormula>AND( 
NOT($Setup.Bypass__c.Validation_Rules__c) 
, Authority_Act__r.Name  = &apos;Other Value&apos; 
, ISBLANK(Other_Authority_Act__c) 
)</errorConditionFormula>
        <errorDisplayField>Other_Authority_Act__c</errorDisplayField>
        <errorMessage>&apos;Other Authority Act&apos; field is mandatory if &apos;Authority Act&apos; field value is equal to &quot;Other Value&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Authority_Act_should_be_blank</fullName>
        <active>true</active>
        <description>&quot;Other Authority Act&quot; field should be blank if and only if &quot;Authority Act&quot; field value is NOT equal to &quot;Other Value&quot;.</description>
        <errorConditionFormula>AND( 
NOT($Setup.Bypass__c.Validation_Rules__c) 
,  Authority_Act__r.Name  &lt;&gt;  &apos;Other Value&apos;
, NOT(ISBLANK( Other_Authority_Act__c  )) 
)</errorConditionFormula>
        <errorDisplayField>Other_Authority_Act__c</errorDisplayField>
        <errorMessage>&apos;Other Authority Act&apos; field should be blank if &apos;Authority Act&apos; field value is NOT equal to &quot;Other Value&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_public_funding_source_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , IF( ISBLANK(Other_public_funding_source__c )
      ,IF(TEXT( Public_funding_source__c ) == &quot;Other&quot;, true,false )
      ,IF(TEXT( Public_funding_source__c ) == &quot;Other&quot;, false,true )
      )
)</errorConditionFormula>
        <errorDisplayField>Other_public_funding_source__c</errorDisplayField>
        <errorMessage>Please either select &quot;Other&quot; in the &quot;Public funding source&quot; field and populate this freetext or select any other option and leave this field blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Scheme_can_not_have_a_Parent</fullName>
        <active>true</active>
        <description>JM 13/02/2107 -A Grant Scheme classified as a Parent or N/A can&apos;t have a Parent Scheme</description>
        <errorConditionFormula>AND(
NOT($Setup.Bypass__c.Validation_Rules__c) 
,OR
(ISPICKVAL( Scheme_Parent_Child__c  , &quot;Parent&quot;), ISPICKVAL( Scheme_Parent_Child__c  , &quot;N/A&quot;))
,NOT(ISBLANK( Parent_Grant_Scheme__c ))
)</errorConditionFormula>
        <errorMessage>A Grant Scheme with a &quot;Scheme Parent / Child&quot; value of Parent or N/A can not have a Parent Grant Scheme</errorMessage>
    </validationRules>
</CustomObject>